[package]
name = "gossip-listener"
version = "0.1.0"
authors = ["Dave Jones"]
edition = "2021"

[dependencies]
iroh = "0.32"
iroh-gossip = "0.32"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-lite = "2"
hex = "0.4"
bytes = "1"
anyhow = "1"
rand = "0.8"
